Added a bunch more stuff. I'll probably commit properly next time.

--- a/GemBot/GemBot.csproj
+++ b/GemBot/GemBot.csproj
@@ -11,4 +11,10 @@
       <PackageReference Include="Discord.Net" Version="3.14.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Data\Drops\" />
+      <Folder Include="Data\OldUsers\" />
+      <Folder Include="Data\User\" />
+    </ItemGroup>
+
 </Project>
