Now loads new users and creates data for them; balance now works, and this really useful thing to check if it can use extrenal emojis.

--- a/GemBot/GemBot.csproj
+++ b/GemBot/GemBot.csproj
@@ -14,7 +14,7 @@
     <ItemGroup>
       <Folder Include="Data\Drops\" />
       <Folder Include="Data\OldUsers\" />
-      <Folder Include="Data\User\" />
+      <Folder Include="Data\Users\" />
     </ItemGroup>
 
 </Project>
