Added charms - and more grind commands.

--- a/GemBot/GemBot.csproj
+++ b/GemBot/GemBot.csproj
@@ -13,6 +13,7 @@
 
     <ItemGroup>
       <Folder Include="Data\Drops\" />
+      <Folder Include="Data\ItemLists\" />
       <Folder Include="Data\OldUsers\" />
       <Folder Include="Data\Users\" />
     </ItemGroup>
