Added Bank and a lot of customization options.

--- a/GemBot/GemBot.csproj
+++ b/GemBot/GemBot.csproj
@@ -14,6 +14,7 @@
     <ItemGroup>
       <Folder Include="Data\Drops\" />
       <Folder Include="Data\ItemLists\" />
+      <Folder Include="Data\Lists\" />
       <Folder Include="Data\OldUsers\" />
       <Folder Include="Data\Users\" />
     </ItemGroup>
