The program loads files from the correct path whether or not the starting path was placed inside bin/debug/net8.0

--- a/GemBot/GemBot.csproj
+++ b/GemBot/GemBot.csproj
@@ -12,14 +12,14 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Data\DailyQuests\0common\" />
-      <Folder Include="Data\DailyQuests\1uncommon\" />
-      <Folder Include="Data\DailyQuests\2rare\" />
-      <Folder Include="Data\Drops\" />
-      <Folder Include="Data\ItemLists\" />
-      <Folder Include="Data\Lists\" />
-      <Folder Include="Data\OldUsers\" />
-      <Folder Include="Data\Users\" />
+      <Folder Include=".GemBotData\DailyQuests\0common\" />
+      <Folder Include=".GemBotData\DailyQuests\1uncommon\" />
+      <Folder Include=".GemBotData\DailyQuests\2rare\" />
+      <Folder Include=".GemBotData\Drops\" />
+      <Folder Include=".GemBotData\ItemLists\" />
+      <Folder Include=".GemBotData\Lists\" />
+      <Folder Include=".GemBotData\OldUsers\" />
+      <Folder Include=".GemBotData\Users\" />
     </ItemGroup>
 
 </Project>
