Added Crafting, which requires small modification to User and CachedUser data structures. Beg can now fail. Small modification to /work logic, not impacting actual result.

--- a/GemBot/GemBot.csproj
+++ b/GemBot/GemBot.csproj
@@ -12,8 +12,8 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="Data\CraftingRecipes\" />
       <Folder Include="Data\Mine\Chunks\" />
-      <Folder Include="Data\Users\" />
     </ItemGroup>
 
 </Project>
