Added server-wide events, added gold, split GemBot class into Program.cs file (already existing) and SlashCommands.cs, and fixed a lot of bugs.

--- a/GemBot/GemBot.csproj
+++ b/GemBot/GemBot.csproj
@@ -17,6 +17,7 @@
       <Folder Include="Data\Drops\" />
       <Folder Include="Data\Mine\Chunks\" />
       <Folder Include="Data\OldUsers\" />
+      <Folder Include="Data\Servers\" />
       <Folder Include="Data\Users\" />
       <Folder Include="UnitTests\Code\" />
       <Folder Include="UnitTests\Data\" />
